Fix: pictures not showing, bombs at the start all spawning together, layout for start screen and end screen changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ body{
     height:200px;
     width:220px;
 }
+#game_logo{
+  height:100px;
+  width:110px;
+}
 
 .center { 
     display: flex;
@@ -64,16 +68,63 @@ body{
   }
 
   #startTimer{
-    font-size: 50vh;
+    font-size: 30vh;
     color:white;
     font-family: 'Silkscreen', cursive;
   }
 
-  #gameOverScreen{
-    font-size: 10vh;
+/* The Modal (background) */
+.modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 10%;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+}
+
+/* Modal Content */
+.modal-content {
+  margin: auto;
+  padding: 20px;
+  width: 80%;
+  text-align: center;
+}
+
+
+.gameOvermodal {
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 62%; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+ 
+}
+
+/* Modal Content */
+.gameOvermodal-content {
+  margin: auto;
+  padding: 40px;
+  width: 80%;
+  font-family: 'Silkscreen', cursive;
+  font-size: 10vh;
+  text-align: center;
+  border: 5px solid red;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
+
+  /* #gameOverScreen{
+   
     color:white;
-    font-family: 'Silkscreen', cursive;
-    display: none;
+    
+  
      position: absolute;
     flex-flow: wrap;
     justify-content: center;
@@ -82,7 +133,7 @@ body{
     padding:20px;
     border: 5px solid red;
     background-color: rgba(255, 0, 0, 0.5);
-  }
+  } */
   .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
